force-app/main/default/objects/Contact/fields/Account_Branch__c.field-meta.xml
<CustomField>
    <fullName>Account_Branch__c</fullName>
    <formula>TEXT(Account.Branch__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Branch f</label>
    <type>Text</type>
</CustomField>