force-app/main/default/objects/Contact/fields/Administrative_B2B__c.field-meta.xml
<CustomField>
    <fullName>Administrative_B2B__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Administrative/B2B</label>
    <type>Checkbox</type>
</CustomField>