force-app/main/default/objects/Contact/fields/Alternate_Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Phone_Type__c</fullName>
    <label>Alternate Phone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Landline</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>