force-app/main/default/objects/Contact/fields/AP_Billing__c.field-meta.xml
<CustomField>
    <fullName>AP_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check the box if this contact is the designated AP/Billing contact for this account</inlineHelpText>
    <label>AP/Billing</label>
    <type>Checkbox</type>
</CustomField>