force-app/main/default/objects/Contact/fields/Approved_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Approved_Buyer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check the box if this contact is authorized to place purchase orders on behalf of their account</inlineHelpText>
    <label>Approved Buyer</label>
    <type>Checkbox</type>
</CustomField>