force-app/main/default/objects/Contact/fields/CaseSafe_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>CaseSafe_Contact_ID__c</fullName>
    <formula>CaseSafeID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CaseSafe Contact ID</label>
    <type>Text</type>
</CustomField>