force-app/main/default/objects/Contact/fields/check_status__c.field-meta.xml
<CustomField>
    <fullName>check_status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>check status</label>
    <type>Checkbox</type>
</CustomField>