force-app/main/default/objects/Contact/fields/Commercial_Products__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commercial Products</label>
    <type>Checkbox</type>
</CustomField>