force-app/main/default/objects/Contact/fields/Contact_Long_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Long_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Long ID</label>
    <type>Text</type>
</CustomField>