force-app/main/default/objects/Contact/fields/Credit_Form_URL__c.field-meta.xml
<CustomField>
    <fullName>Credit_Form_URL__c</fullName>
    <formula>HYPERLINK($Label.Credit_Application_Form_URL + &apos;?contactid=&apos;+ Id, &apos;Form URL&apos; ,&apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Form URL</label>
    <type>Text</type>
</CustomField>