force-app/main/default/objects/Contact/fields/Dealer_Overview_Updates__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Overview_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dealer Overview Updates</label>
    <type>Checkbox</type>
</CustomField>