force-app/main/default/objects/Contact/fields/Decor24_Login_Contact__c.field-meta.xml
<CustomField>
    <fullName>Decor24_Login_Contact__c</fullName>
    <label>Decor24 Login</label>
    <length>25</length>
    <type>Text</type>
</CustomField>