force-app/main/default/objects/Contact/fields/Decor24_Password_Contact__c.field-meta.xml
<CustomField>
    <fullName>Decor24_Password_Contact__c</fullName>
    <label>Decor24 Password</label>
    <length>25</length>
    <type>Text</type>
</CustomField>