force-app/main/default/objects/Contact/fields/Department_Service_LT__c.field-meta.xml
<CustomField>
    <fullName>Department_Service_LT__c</fullName>
    <label>Department Service LT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketing/sales</fullName>
            </value>
            <value>
                <fullName>Purchasing</fullName>
            </value>
            <value>
                <fullName>Freight/Shipping and Delivery</fullName>
            </value>
            <value>
                <fullName>Senior Strategic Relationship Manager</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Samples</fullName>
                <isActive>false</isActive>
                <label>Samples</label>
            </value>
            <value>
                <fullName>Senior Strategic Relationship Manage</fullName>
                <isActive>false</isActive>
                <label>Senior Strategic Relationship Manage</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>