force-app/main/default/objects/Contact/fields/Designer_Contact_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Designer_Contact_Record_ID__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Designer Contact Record ID</label>
    <type>Text</type>
</CustomField>