force-app/main/default/objects/Contact/fields/DiSC_Image__c.field-meta.xml
<CustomField>
    <fullName>DiSC_Image__c</fullName>
    <label>DiSC Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>