force-app/main/default/objects/Contact/fields/DiSC_Profile_Type__c.field-meta.xml
<CustomField>
    <fullName>DiSC_Profile_Type__c</fullName>
    <label>DiSC Profile Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>D = Dominance</fullName>
            </value>
            <value>
                <fullName>i = Influence</fullName>
            </value>
            <value>
                <fullName>S = Steadiness</fullName>
            </value>
            <value>
                <fullName>C = Conscientiousness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>