force-app/main/default/objects/Contact/fields/Former_Alternate_Email__c.field-meta.xml
<CustomField>
    <fullName>Former_Alternate_Email__c</fullName>
    <label>Former / Alternate Email</label>
    <type>Email</type>
</CustomField>