force-app/main/default/objects/Contact/fields/Former_Employee__c.field-meta.xml
<CustomField>
    <fullName>Former_Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if individual is no longer employed by LTD.</description>
    <inlineHelpText>Check this box if individual is no longer employed by LTD.</inlineHelpText>
    <label>Former Employee</label>
    <type>Checkbox</type>
</CustomField>