force-app/main/default/objects/Contact/fields/GLScheduler__CampaignId__c.field-meta.xml
<CustomField>
    <fullName>GLScheduler__CampaignId__c</fullName>
    <formula>if( FirstName = &quot;Tim&quot;,&quot;7017F0000004zTC&quot;,&quot;7017F0000004zTC&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CampaignId</label>
    <type>Text</type>
</CustomField>