force-app/main/default/objects/Contact/fields/GLScheduler__Declarative_Scheduler_DateTime__c.field-meta.xml
<CustomField>
    <fullName>GLScheduler__Declarative_Scheduler_DateTime__c</fullName>
    <inlineHelpText>This is included to be used while testing the Declarative scheduler tool</inlineHelpText>
    <label>Declarative Scheduler DateTime</label>
    <type>DateTime</type>
</CustomField>