force-app/main/default/objects/Contact/fields/Installation_Products_and_News__c.field-meta.xml
<CustomField>
    <fullName>Installation_Products_and_News__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Installation Products and News</label>
    <type>Checkbox</type>
</CustomField>