force-app/main/default/objects/Contact/fields/Is_Reference__c.field-meta.xml
<CustomField>
    <fullName>Is_Reference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Reference</label>
    <type>Checkbox</type>
</CustomField>