force-app/main/default/objects/Contact/fields/Preference_Notes__c.field-meta.xml
<CustomField>
    <fullName>Preference_Notes__c</fullName>
    <label>Preference Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>