force-app/main/default/objects/Contact/fields/Preferred_vendor__c.field-meta.xml
<CustomField>
    <fullName>Preferred_vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred vendor</label>
    <referenceTo>Preferred_vendor__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>