force-app/main/default/objects/Contact/fields/Primary_Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone_Type__c</fullName>
    <label>Primary Phone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Landline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>