force-app/main/default/objects/Contact/fields/Relationship_Notes__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Notes__c</fullName>
    <label>Relationship Notes</label>
    <type>TextArea</type>
</CustomField>