force-app/main/default/objects/Contact/fields/Residential_Products__c.field-meta.xml
<CustomField>
    <fullName>Residential_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Residential Products</label>
    <type>Checkbox</type>
</CustomField>