force-app/main/default/objects/Contact/fields/Roles__c.field-meta.xml
<CustomField>
    <fullName>Roles__c</fullName>
    <inlineHelpText>Select all that apply</inlineHelpText>
    <label>Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounts Payable</fullName>
            </value>
            <value>
                <fullName>Administrative Manager</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Customer Servicer</fullName>
            </value>
            <value>
                <fullName>Designer</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Estimator</fullName>
            </value>
            <value>
                <fullName>General Contractor</fullName>
            </value>
            <value>
                <fullName>Homeowner</fullName>
            </value>
            <value>
                <fullName>Landscape Architect</fullName>
            </value>
            <value>
                <fullName>Location Manager</fullName>
            </value>
            <value>
                <fullName>Owner/Operator</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Purchasing</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Tile Contractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>