force-app/main/default/objects/Contact/fields/send_creditApplication__c.field-meta.xml
<CustomField>
    <fullName>send_creditApplication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>send creditApplication</label>
    <type>Checkbox</type>
</CustomField>