force-app/main/default/objects/Contact/fields/SF_User_Acct__c.field-meta.xml
<CustomField>
    <fullName>SF_User_Acct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Connects to Salesforce User account</description>
    <inlineHelpText>Connects to Salesforce User account</inlineHelpText>
    <label>SF User Acct</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>