force-app/main/default/objects/Contact/fields/Social_Media_Handle__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Handle__c</fullName>
    <label>Social Media Handle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>