force-app/main/default/objects/Contact/fields/Trade_Associations__c.field-meta.xml
<CustomField>
    <fullName>Trade_Associations__c</fullName>
    <inlineHelpText>Select all that apply</inlineHelpText>
    <label>Trade Associations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AGC</fullName>
            </value>
            <value>
                <fullName>AIA</fullName>
            </value>
            <value>
                <fullName>ASID</fullName>
            </value>
            <value>
                <fullName>BOMA</fullName>
            </value>
            <value>
                <fullName>CSI</fullName>
            </value>
            <value>
                <fullName>HBA</fullName>
            </value>
            <value>
                <fullName>HBI</fullName>
            </value>
            <value>
                <fullName>IFMA</fullName>
            </value>
            <value>
                <fullName>IIDA</fullName>
            </value>
            <value>
                <fullName>NAHB</fullName>
            </value>
            <value>
                <fullName>NAWIC</fullName>
            </value>
            <value>
                <fullName>NKBA</fullName>
            </value>
            <value>
                <fullName>NTCA</fullName>
            </value>
            <value>
                <fullName>USGBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>