force-app/main/default/objects/Contact/recordTypes/Architect_Designer.recordType-meta.xml
<RecordType>
    <fullName>Architect_Designer</fullName>
    <active>false</active>
    <description>A&amp;D Contact Record Type</description>
    <label>Architect &amp; Designer</label>
</RecordType>