force-app/main/default/objects/Contact/recordTypes/Contractor_Dealer.recordType-meta.xml
<RecordType>
    <fullName>Contractor_Dealer</fullName>
    <active>false</active>
    <description>Contractor &amp; Dealer Record Type</description>
    <label>Contractor &amp; Dealer</label>
</RecordType>