force-app/main/default/objects/Contact/recordTypes/General_Contacts.recordType-meta.xml
<RecordType>
    <fullName>General_Contacts</fullName>
    <active>true</active>
    <label>General Contacts</label>
</RecordType>