force-app/main/default/objects/Contact/recordTypes/General_Contractor.recordType-meta.xml
<RecordType>
    <fullName>General_Contractor</fullName>
    <active>false</active>
    <description>General Contractor Contact Record Type</description>
    <label>General Contractor</label>
</RecordType>