force-app/main/default/objects/Contact/recordTypes/National_Account.recordType-meta.xml
<RecordType>
    <fullName>National_Account</fullName>
    <active>false</active>
    <label>National Account</label>
</RecordType>