force-app/main/default/objects/Contact/recordTypes/Professional.recordType-meta.xml
<RecordType>
    <fullName>Professional</fullName>
    <active>true</active>
    <description>Professional Contacts</description>
    <label>Professional</label>
</RecordType>