force-app/main/default/objects/Contact/recordTypes/Vendor.recordType-meta.xml
<RecordType>
    <fullName>Vendor</fullName>
    <active>false</active>
    <description>Vendor Contacts</description>
    <label>Vendor</label>
</RecordType>