force-app/main/default/objects/Contact/validationRules/Alternate_Phone_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Alternate_Phone_Type</fullName>
    <active>true</active>
    <errorConditionFormula>IF(!ISBLANK(  Alternate_Phone__c  ) &amp;&amp; ISPICKVAL(  Alternate_Phone_Type__c  ,&quot;&quot;), true,false)</errorConditionFormula>
    <errorDisplayField>Alternate_Phone_Type__c</errorDisplayField>
    <errorMessage>Please enter an Alternate Phone Type</errorMessage>
</ValidationRule>