force-app/main/default/objects/Contact/validationRules/Primary_Phone_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Phone_Type</fullName>
    <active>true</active>
    <errorConditionFormula>IF(!ISBLANK( Primary_Phone__c ) &amp;&amp; ISPICKVAL( Primary_Phone_Type__c ,&quot;&quot;), true,false)</errorConditionFormula>
    <errorDisplayField>Primary_Phone_Type__c</errorDisplayField>
    <errorMessage>Please enter a Primary Phone Type</errorMessage>
</ValidationRule>