force-app/main/default/objects/Contact/validationRules/Validate_Record_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Record_Type</fullName>
    <active>false</active>
    <errorConditionFormula>Account.RecordType.Name != $RecordType.Name</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Record type not matched</errorMessage>
</ValidationRule>