force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Account.Inactive__c</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.Inactive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Contacts</label>
</ListView>