force-app/main/default/objects/Contact/listViews/Cincinnati_Contacts.listView-meta.xml
<ListView>
    <fullName>Cincinnati_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL_OPT_OUT</columns>
    <columns>Inactive__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Branch__c</field>
        <operation>equals</operation>
        <value>Cincinnati,Dayton</value>
    </filters>
    <label>Cincinnati Contacts</label>
</ListView>