force-app/main/default/objects/Contact/listViews/Cincinnati_Designers.listView-meta.xml
<ListView>
    <fullName>Cincinnati_Designers</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Branch__c</field>
        <operation>equals</operation>
        <value>Cincinnati</value>
    </filters>
    <filters>
        <field>Contact_Type__c</field>
        <operation>equals</operation>
        <value>Designer</value>
    </filters>
    <label>Cincinnati Designers</label>
    <sharedTo>
        <group>CincinnatiBranch</group>
    </sharedTo>
</ListView>