force-app/main/default/objects/Contact/listViews/Evansville_Contacts.listView-meta.xml
<ListView>
    <fullName>Evansville_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Branch__c</field>
        <operation>equals</operation>
        <value>Evansville</value>
    </filters>
    <label>Evansville Contacts</label>
    <sharedTo>
        <group>EvansvilleBranch</group>
    </sharedTo>
</ListView>