force-app/main/default/objects/Contact/listViews/Evansville_Contractors_and_Dealers.listView-meta.xml
<ListView>
    <fullName>Evansville_Contractors_and_Dealers</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Branch__c</field>
        <operation>equals</operation>
        <value>Evansville</value>
    </filters>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Contractor_Dealer</value>
    </filters>
    <label>Evansville Contractors and Dealers</label>
    <sharedTo>
        <group>EvansvilleBranch</group>
    </sharedTo>
</ListView>