force-app/main/default/objects/Contact/listViews/Evansville_Designers.listView-meta.xml
<ListView>
    <fullName>Evansville_Designers</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Branch__c</field>
        <operation>equals</operation>
        <value>Evansville</value>
    </filters>
    <filters>
        <field>Contact_Type__c</field>
        <operation>equals</operation>
        <value>Designer,Specifier</value>
    </filters>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Architect_Designer</value>
    </filters>
    <label>Evansville Designers</label>
    <sharedTo>
        <group>EvansvilleBranch</group>
    </sharedTo>
</ListView>