force-app/main/default/objects/Contact/listViews/Knoxville_Contacts.listView-meta.xml
<ListView>
    <fullName>Knoxville_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Branch__c</field>
        <operation>equals</operation>
        <value>Knoxville</value>
    </filters>
    <label>Knoxville Contacts</label>
    <sharedTo>
        <group>KnoxvilleBranch</group>
    </sharedTo>
</ListView>